# splunkgate

./: .bandit  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  README.md  architecture_diagram.md  brief.md  codecov.yml  mypy.ini  pyproject.toml
.github/scripts/: check_loc.py  parse_appinspect.py
.github/workflows/: ci.yml  release.yml  security.yml
Synthetic-Data/: README.md  generate_agent_verdicts.py
Synthetic-Data/jailbreak_corpus/: benign_control.jsonl  multi_turn_injection.jsonl  tool_call_abuse.jsonl
Synthetic-Data/pii_leak_corpus/: README.md  imprompter_payloads.jsonl
Synthetic-Data/scripts/: README.md  emit_sample_verdict.py
Synthetic-Data/scripts/tests/: test_emit_sample_verdict.py
docs/: 2026-06-11-remaining-work.md  HOW_IT_WORKS.md  MCP_EXPLAINED.md  PRD.md  architecture.md  cicd-spec.md  deploy-guide.md  epics.md  eval-results.md  eval-spec.md  splunkbase-submission-checklist.md  sprint-status.yaml  ux-spec.md
docs/archive/dashboard-studio-v2/: ROLLBACK.md  regulator_evidence_pack.xml  verdict_inspector.xml
docs/audits/: 2026-06-11-docs-and-submission-audit.md
docs/design/: architecture-diagram-brief.md  splunk-app-redesign-brief.md
docs/integrations/: README.md  claude-desktop.md  cursor.md
docs/integrations/_examples/: splunkgate-mcp-coexist-with-splunk.json  splunkgate-mcp-http.json  splunkgate-mcp-stdio.json
docs/ops/: pre-commit-install.md  release-process.md  security-scan-policy.md
docs/plans/: 2026-06-02-aegis-spec-set-design.md  2026-06-03-audit-synthesis.md  2026-06-03-second-pass-audit-correctness.md  2026-06-03-second-pass-audit-regressions.md  2026-06-03-second-pass-synthesis.md  2026-06-03-spec-audit-cross-spec.md  2026-06-03-spec-audit-goal-coverage.md  2026-06-03-spec-audit-stories-A.md  2026-06-03-spec-audit-stories-B.md  2026-06-03-spec-audit-stories-C.md  2026-06-09-mcp-01-implementation.md  2026-06-09-mcp-design.md
docs/stories/: story-app-01-app-conf-and-metadata-skeleton.md  story-app-02-props-transforms-for-aegis-verdict-sourcetype.md  story-app-03-savedsearches-and-mltk-macros.md  story-app-04-collections-conf-kvstore-verdict-history.md  story-app-05-dashboard-agent-risk-overview.md  story-app-06-dashboard-verdict-inspector.md  story-app-07-dashboard-regulator-evidence-pack.md  story-app-08-risk-factors-conf-es-rba-integration.md  story-app-09-static-icons-and-app-assets.md  story-app-10-app-vision-loop-validation.md  story-app-11-appinspect-expect-yaml-and-manual-checks.md  story-app-12-splunkbase-submission-package-and-checklist.md  story-app-13-synthetic-verdict-emitter-script.md  story-app-14-mitre-atlas-technique-mapping.md  story-cicd-01-build-pipeline-python-wheels.md  story-cicd-02-test-pipeline-pytest-respx.md  story-cicd-03-loc-cap-enforcement.md  story-cicd-04-pre-commit-hooks.md  story-cicd-05-appinspect-gate.md  story-cicd-06-eval-smoke-job.md  story-cicd-07-security-scan-pipeline.md  story-cicd-08-release-pipeline-signed.md  story-core-01-verdict-pydantic-types.md  story-core-02-otel-evaluation-event-emitter.md  story-core-03-error-model-and-trace-propagation.md  story-core-04-structlog-config-and-conventions.md  story-core-05-otel-hec-exporter-config.md  story-dc-01-config-delta-docs-and-example.md  story-dc-02-ai-defense-backend-upstream-pr.md  story-dc-03-langgraph-example-agent.md  story-demo-01-screencast-and-script.md  story-demo-02-saia-nl-query-demo-moment.md  story-eval-01-synthetic-data-generator-dns-guard-pattern.md  story-eval-02-jailbreakbench-and-advbench-loaders.md  story-eval-03-imprompter-payload-corpus-from-pdf.md  story-eval-04-three-baselines-defenseclaw-gptoss-aidefense-alone.md  story-eval-05-metrics-and-report-generator.md  story-eval-06-end-to-end-agent-to-splunk-integration.md  story-explainer-01-template-based-verdict-explainer.md  story-foundsec-01-splunk-rest-search-client.md  (+30 more)
eval/: pyproject.toml
eval/data/: jailbreakbench_behaviors.csv
eval/scripts/: README.md  __init__.py  e2e_demo.py  eval_smoke.py  run_full.py  smoke.py
eval/scripts/tests/: __init__.py  test_e2e_demo.py
eval/src/splunkgate_eval/: __init__.py  _cost_tables.json  advbench.py  cost.py  imprompter.py  jailbreakbench.py  latency.py  metrics.py  reliability.py  report.py  synthetic.py
eval/src/splunkgate_eval/baselines/: __init__.py  _gpt_oss_mock.py  _regex_loader.py  ai_defense_alone.py  defenseclaw_regex_only.py  gpt_oss_120b_judge.py
eval/tests/: test_advbench_loader.py  test_baseline_ai_defense_alone.py  test_baseline_defenseclaw.py  test_baseline_gpt_oss.py  test_imprompter_loader.py  test_jailbreakbench_loader.py  test_latency.py  test_metrics.py  test_report.py  test_smoke_e2e.py  test_synthetic_corpus.py
eval/tests/fixtures/: imprompter_paper_snippets.py
inspiration/defenseclaw/: README.md
integrations/defenseclaw/: README.md
integrations/defenseclaw/examples/: docker-compose.yaml  hec_double.py  verify.py
integrations/defenseclaw/tests/: test_docker_compose_smoke.py
scripts/: _pack_tarball.py  build_splunk_app_tgz.sh  bump_version.sh  deploy_to_splunk_cloud.sh  generate_app_icons.py  local_docker_splunk.sh  run_appinspect_cloud.sh  verify_splunkbase_artifact.sh
splunk_apps/aegis_app/: .appinspect.expect.yaml  .appinspect.manualcheck.yaml  .appinspect.warnings.md  README
splunk_apps/aegis_app/default/: app.conf  collections.conf  eventtypes.conf  macros.conf  props.conf  risk_factors.conf  savedsearches.conf  (+1 more)
splunk_apps/splunkgate_app/: .appinspect.expect.yaml  .appinspect.manualcheck.yaml  .appinspect.warnings.md  README  RELEASE_NOTES.md
tests/: test_bandit_clean.py  test_build_artifact.py  test_bump_version.sh  test_parse_appinspect.py  test_release_workflow_structure.py  test_suit_agent_risk_overview.py  test_suit_evidence_pack.py  test_suit_scaffold.py  test_suit_verdict_inspector.py
tests/fixtures/: loc_at_threshold.py.fixture  loc_oversized.py.fixture
web/: pnpm-lock.yaml
web/app/: globals.css  page.tsx
web/lib/: docs-nav.ts  highlight.ts  links.ts  verdict-data.ts
web/styles/: mobile-fixes.css
(+75 files in other folders)
