[project]
name = "splunkgate-monorepo"
version = "0.0.1"
description = "SplunkGate — runtime AI agent safety net for Splunk/Cisco enterprises"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "SplunkGate contributors" }]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "hypothesis>=6.112",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=4.0",
    "splunkgate-core",
    "splunkgate-judges",
    "splunkgate-mw",
    "splunkgate-mcp",
    "splunkgate-eval",
    # Pinned exact: scripts/generate_app_icons.py promises md5-deterministic
    # PNG output, and Pillow can ship encoder/font-metric tweaks in minor
    # bumps that silently break the BDD block-4 determinism assertion.
    "pillow==12.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "eval"]
addopts = "--import-mode=importlib"

[tool.uv.sources]
splunkgate-core = { workspace = true }
splunkgate-judges = { workspace = true }
splunkgate-mw = { workspace = true }
splunkgate-mcp = { workspace = true }
splunkgate-eval = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/splunkgate_core",
    "packages/splunkgate_judges",
    "packages/splunkgate_mw",
    "packages/splunkgate_mcp",
    "eval",
]
