[project]
name = "splunkgate-monorepo"
version = "0.0.1"
description = "SplunkGate — runtime AI agent safety net for Splunk/Cisco enterprises"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "SplunkGate contributors" }]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "hypothesis>=6.112",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
    "pre-commit>=4.0",
    "splunkgate-core",
    "splunkgate-judges",
    "splunkgate-mw",
    "splunkgate-mcp",
    "splunkgate-eval",
    # Pinned exact: scripts/generate_app_icons.py promises md5-deterministic
    # PNG output, and Pillow can ship encoder/font-metric tweaks in minor
    # bumps that silently break the BDD block-4 determinism assertion.
    "pillow==12.2.0",
    # Splunk AppInspect — official Splunkbase static-analysis tool. 4.2.1 is
    # the floor mandated by docs/architecture.md § "Stack (locked)"; never
    # downgrade to 4.1.x even if a dep complains. Used by the `appinspect`
    # CI job (story-cicd-05) to gate splunk_apps/splunkgate_app/ on every PR.
    "splunk-appinspect>=4.2.1",
    # FastAPI + uvicorn — test-only dependency used by
    # `packages/splunkgate_judges/tests/integration/fake_ai_defense_server.py`
    # to spin up an in-process Cisco AI Defense fake. Permitted in
    # tests/integration/ per docs/architecture.md (only banned in the MCP
    # server runtime context).
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "eval"]
addopts = "--import-mode=importlib"

[tool.uv.sources]
splunkgate-core = { workspace = true }
splunkgate-judges = { workspace = true }
splunkgate-mw = { workspace = true }
splunkgate-mcp = { workspace = true }
splunkgate-eval = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/splunkgate_core",
    "packages/splunkgate_judges",
    "packages/splunkgate_mw",
    "packages/splunkgate_mcp",
    "eval",
]
