[project]
name = "aegis-eval"
version = "0.0.1"
description = "Aegis eval harness — JailbreakBench, AdvBench, synthetic prompt-injection datasets"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
dependencies = ["aegis-core", "aegis-judges"]

[tool.uv.sources]
aegis-core = { workspace = true }
aegis-judges = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_eval"]
