[project]
name = "splunkgate-eval"
version = "0.0.1"
description = "SplunkGate eval harness — JailbreakBench, AdvBench, synthetic prompt-injection datasets"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
dependencies = ["splunkgate-core", "splunkgate-judges"]

[tool.uv.sources]
splunkgate-core = { workspace = true }
splunkgate-judges = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/splunkgate_eval"]
